modificacion del aspecto visual y re ordenamiento de la informacion

--- a/index.html
+++ b/index.html
@@ -1,71 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/15199fa674.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <div class="header-nombre-portfolio">
-        <p>Daniel Vergaray</p>
-      </div>
-      <div class="header-info-portfolio">
-        <ul>
-          <li>sobre mi</li>
-          <li>portfolio</li>
-          <li>contacto</li>
-        </ul>
-      </div>
 
-      <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/15199fa674.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Document</title>
+</head>
 
-    <div class="header-info-mobile" id="menuDesplegable">
-      <ul id="menuHamburguesaId"></ul>
+<body>
+  <header>
+    <div class="header-nombre-portfolio">
+      <p>Daniel Vergaray</p>
     </div>
-    <section id="todoElContenido" class="todo-el-contenido">
-      <main>
-        <section class="main-principal">
-          <div class="main-titulo-contenedor">
-            <h1>
-              ¡Hola! Bienvenid@ a mi portfolio, <br />soy Daniel, Frontend
-              <br />Developer Jr.
-            </h1>
-          </div>
-          <div class="main-foto" id="sobreMi">
-            <img src="./imagenes/yo-cv.jpeg" alt="foto-de-perfil" />
-          </div>
-        </section>
-        <section class="main-secundaria">
-          <div class="redes">
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href=""><i class="fa-brands fa-square-github"></i></a>
-          </div>
-        </section>
-      </main>
-      <section class="sobreMi-container">
-        <h2 class="animate__animated animate__fadeIn">Sobre mi</h2>
-        <!-- <img
+    <div class="header-info-portfolio">
+      <ul>
+        <li>sobre mi</li>
+        <li>portfolio</li>
+        <li>contacto</li>
+      </ul>
+    </div>
+
+    <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
+      <i class="fa-solid fa-bars"></i>
+    </div>
+  </header>
+
+  <div class="header-info-mobile" id="menuDesplegable">
+    <ul id="menuHamburguesaId"></ul>
+  </div>
+  <section id="todoElContenido" class="todo-el-contenido">
+    <main>
+      <section class="main-principal">
+        <div class="main-titulo-contenedor">
+          <h1>
+            ¡Hola! Bienvenid@ a mi portfolio, <br />soy Daniel, Frontend
+            <br />Developer Jr.
+          </h1>
+        </div>
+        <div class="main-foto" id="sobreMi">
+          <img src="./imagenes/yo-cv.jpeg" alt="foto-de-perfil" />
+        </div>
+      </section>
+      <section class="main-secundaria">
+        <div class="redes">
+          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          <a href=""><i class="fa-brands fa-square-github"></i></a>
+        </div>
+      </section>
+    </main>
+    <section class="sobreMi-container">
+      <h2 class="animate__animated animate__fadeIn">Sobre mi</h2>
+      <!-- <img
           src="./imagenes/yo-cv.jpeg"
           alt="foto-de-perfil"
           class="animate__animated animate__bounce"
         /> -->
-        <!-- <h3>Soy Daniel</h3> -->
-        <!-- <p data-aos="fade-up" id="estudiosId">
+      <!-- <h3>Soy Daniel</h3> -->
+      <!-- <p data-aos="fade-up" id="estudiosId">
           Una persona trabajadora, constante y dedicada, considero que más
           importante que el talento es la dedicación y convicción de querer
           alcanzar un objetivo. Creo firmemente que el trabajo en equipo es la
@@ -73,130 +69,122 @@
           manera independiente también. Para finalizar, considero que el
           crecimiento individual se traduce en el crecimiento de la empresa en sí.
         </p> -->
-        <p data-aos="fade-up">
-          Mi nombre es Daniel, soy ingeniero civil de profesión. Esta hermosa
-          carrera me ha llevado a conocer distintos aspectos de la vida como el
-          hecho de que el ser humano es capaz de muchas cosas siempre que lo
-          crea posible, capaz de adaptarse a cualquier situación y reinventarse
-          las veces que sean necesarias. Es este último tópico me llevo a darme
-          cuenta que quería darle un rumbo a mi vida. Es por eso que desde el
-          año 2022 encontré lo que me apasiona. Comencé a entrar al mundo de la
-          programación porque jamás es tarde para volver a empezar.
+      <p data-aos="fade-up">
+        Mi nombre es Daniel, soy ingeniero civil de profesión. Esta hermosa
+        carrera me ha llevado a conocer distintos aspectos de la vida como el
+        hecho de que el ser humano es capaz de muchas cosas siempre que lo
+        crea posible, capaz de adaptarse a cualquier situación y reinventarse
+        las veces que sean necesarias. Es este último tópico me llevo a darme
+        cuenta que quería darle un rumbo a mi vida. Es por eso que desde el
+        año 2022 encontré lo que me apasiona. Comencé a entrar al mundo de la
+        programación porque jamás es tarde para volver a empezar.
+      </p>
+
+      <p data-aos="fade-up" id="estudiosId">
+        A nivel profesional, como ingeniero civil he tenido experiencia en
+        coordinación de proyectos, manejo de personal y trabajo en equipo.
+        Experiencias que me han ayudado a mejorar habilidades blandas como
+        gestión de conflictos, manejo del estrés, habilidades de comunicación,
+        entre otras. Las cuales son fundamentales en el desempeño de
+        actividades diarias dentro de cualquier empresa.
+      </p>
+    </section>
+    <section class="estudios">
+      <h2 class="animate__animated animate__fadeIn">Estudios</h2>
+      <p data-aos="fade-up">
+        Soy una persona trabajadora y dedicada, considero que más importante
+        que el talento es la dedicación y el constante aprendizaje. Te cuento
+        cuales son los cursos que he tomado en esta etapa.
+      </p>
+      <h3>Cursos y especializaciones</h3>
+      <ul data-aos="flip-left">
+        <li><i class="fa-solid fa-check"></i>Desarrollo web</li>
+        <p class="titulo-instituto">CoderHouse</p>
+        <p>
+          08 semanas en donde se desarrollaron temas como Html5, Css3, Sass,
+          Bootstrap, entre otros.
         </p>
 
-        <p data-aos="fade-up" id="estudiosId">
-          A nivel profesional, como ingeniero civil he tenido experiencia en
-          coordinación de proyectos, manejo de personal y trabajo en equipo.
-          Experiencias que me han ayudado a mejorar habilidades blandas como
-          gestión de conflictos, manejo del estrés, habilidades de comunicación,
-          entre otras. Las cuales son fundamentales en el desempeño de
-          actividades diarias dentro de cualquier empresa.
-        </p>
-      </section>
-      <section class="estudios">
-        <h2 class="animate__animated animate__fadeIn">Estudios</h2>
-        <p data-aos="fade-up">
-          Soy una persona trabajadora y dedicada, considero que más importante
-          que el talento es la dedicación y el constante aprendizaje. Te cuento
-          cuales son los cursos que he tomado en esta etapa.
-        </p>
-        <h3>Cursos y especializaciones</h3>
-        <ul data-aos="flip-left">
-          <li><i class="fa-solid fa-check"></i>Desarrollo web</li>
-          <p class="titulo-instituto">CoderHouse</p>
-          <p>
-            08 semanas en donde se desarrollaron temas como Html5, Css3, Sass,
-            Bootstrap, entre otros.
-          </p>
+        <li><i class="fa-solid fa-check"></i>javaScript</li>
+        <p class="titulo-instituto">CoderHouse</p>
+        <p>08 semanas en donde se desarrollaron lógica de javaScript.</p>
 
-          <li><i class="fa-solid fa-check"></i>javaScript</li>
-          <p class="titulo-instituto">CoderHouse</p>
-          <p>08 semanas en donde se desarrollaron lógica de javaScript.</p>
+        <li><i class="fa-solid fa-check"></i>React</li>
+        <p class="titulo-instituto">CoderHouse</p>
+        <p>Cursando actualmente (08 semanas).</p>
 
-          <li><i class="fa-solid fa-check"></i>React</li>
-          <p class="titulo-instituto">CoderHouse</p>
-          <p>Cursando actualmente (08 semanas).</p>
+        <li><i class="fa-solid fa-check"></i>WordPress</li>
+        <p class="titulo-instituto">CoderHouse</p>
+        <p>Proxímamente.</p>
 
-          <li><i class="fa-solid fa-check"></i>WordPress</li>
-          <p class="titulo-instituto">CoderHouse</p>
-          <p>Proxímamente.</p>
-
-          <li id="portfolioId"><i class="fa-solid fa-check"></i>Vue js</li>
-          <p class="titulo-instituto">Udemy</p>
-          <p>Proxímamente.</p>
-        </ul>
-      </section>
-      <section class="portfolio-container" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <div class="proyectos-container">
-          <div class="proyectos">
-            <a href="https://danielvergaray.github.io/pagina-web-mrSnack/"
-              ><h3>Web Mr Snack</h3>
-              <img src="./imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
-            </a>
-            <p>
+        <li id="portfolioId"><i class="fa-solid fa-check"></i>Vue js</li>
+        <p class="titulo-instituto">Udemy</p>
+        <p>Proxímamente.</p>
+      </ul>
+    </section>
+    <section class="portfolio-container" data-aos="fade-up">
+      <h2>Portfolio</h2>
+      <div class="proyectos-container">
+        <div class="proyectos">
+          <a href="./secciones/webMrSnack.html">
+            <p>Esta seccion podrás observar los proyectos que he desarollado</p>
+            <h3>Web Mr Snack</h3>
+            <img src="./imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
+          </a>
+          <!-- <p>
               Este proyecto realizado para un emprendimiento de snacks. Fue
               llevado a cabo usando Html5 y Css3, ademas se implementaron
               estategias SEO, Bootstrap y Sass, se realizaron versiones desktop
               y mobile.
-            </p>
-          </div>
-          <div class="proyectos" data-aos="fade-up">
-            <a
-              href="https://danielvergaray.github.io/entregaFinal_ecommerce/index.html"
-              ><h3>Ecommerce Mr. Snack</h3>
-              <img src="./imagenes/ecommerce.jpeg" alt="Ecommerce-mr-snack" />
-            </a>
-            <p>
+            </p> -->
+        </div>
+        <div class="proyectos" data-aos="fade-up">
+          <a href="https://danielvergaray.github.io/entregaFinal_ecommerce/index.html">
+            <h3>Ecommerce Mr. Snack</h3>
+            <img src="./imagenes/ecommerce.jpeg" alt="Ecommerce-mr-snack" />
+          </a>
+          <!-- <p>
               Este proyecto consiste en un Ecommerce creado para el
               emprendimiento Mr. Snack. Fue Ha sido llevado utilizando
               javaScript, creando los productos del emprendimiento de manera
               dinamica pudiendo filtrar los proudctos por categoria y buscarlos
               por su nombre, se realizaron versiones desktop y mobile.
-            </p>
-          </div>
-          <div class="proyectos" data-aos="fade-up">
-            <a href="https://danielvergaray.github.io/AdivinaElNumero_juego/"
-              ><h3>Juego: Adivina el Numero</h3>
-              <img
-                src="./imagenes/adivinaElNumero.jpeg"
-                alt="juego-AdivinaElNumero"
-              />
-            </a>
-            <p>
+            </p> -->
+        </div>
+        <div class="proyectos" data-aos="fade-up">
+          <a href="https://danielvergaray.github.io/AdivinaElNumero_juego/">
+            <h3>Juego: Adivina el Numero</h3>
+            <img src="./imagenes/adivinaElNumero.jpeg" alt="juego-AdivinaElNumero" />
+          </a>
+          <!-- <p>
               Este proyecto consiste en un juego donde se genera un numero al
               azar y el usuario debe adivinarlo, contando con pistas que se
               muestran de acuerdo al valor introducido por el usuario. Fue
               realizado usando javaScript.
-            </p>
-          </div>
-          <div class="proyectos proyecto-pig-game">
-            <h3>Proyecto 4</h3>
-          </div>
+            </p> -->
         </div>
-      </section>
-      <section id="contactoId" class="contacto-container" data-aos="fade-up">
-        <h2>Contacto</h2>
-        <div class="redes">
-          <a href="www.linkedin.com/in/daniel-vergaray"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-          <a
-            href="https://github.com/danielvergaray?tab=repositories&q=&type=public&language=&sort="
-            ><i class="fa-brands fa-square-github"></i
-          ></a>
-          <a href="https://wa.me/51950011434"
-            ><i class="fa-brands fa-square-whatsapp"></i
-          ></a>
-          <p>danielvergarayescobar@gmail.com</p>
+        <div class="proyectos proyecto-pig-game">
+          <h3>Proyecto 4</h3>
         </div>
-      </section>
+      </div>
     </section>
+    <section id="contactoId" class="contacto-container" data-aos="fade-up">
+      <h2>Contacto</h2>
+      <div class="redes">
+        <a href="www.linkedin.com/in/daniel-vergaray"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/danielvergaray?tab=repositories&q=&type=public&language=&sort="><i
+            class="fa-brands fa-square-github"></i></a>
+        <a href="https://wa.me/51950011434"><i class="fa-brands fa-square-whatsapp"></i></a>
+        <p>danielvergarayescobar@gmail.com</p>
+      </div>
+    </section>
+  </section>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-    <script src="./javaScript/script.js"></script>
-  </body>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="./javaScript/script.js"></script>
+</body>
+
 </html>
