--- a/secciones/webMrSnack.html
+++ b/secciones/webMrSnack.html
@@ -4,25 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Mr. Snack</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <section class="portfolio-container">
-        <div class="proyectos-container">
-            <div class="proyectos">
-                <h3>Web Mr Snack</h3>
-                <img src="../imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
+    <header>
+        <div class="header-nombre-portfolio">
+            <a href="../index.html"><p>Daniel Vergaray</p></a>
+        </div>
 
-                <p>
-                    Este proyecto realizado para un emprendimiento de snacks. Fue
-                    llevado a cabo usando Html5 y Css3, ademas se implementaron
-                    estategias SEO, Bootstrap y Sass, se realizaron versiones desktop
-                    y mobile.
-                </p>
-            </div>
-            <a href="https://danielvergaray.github.io/pagina-web-mrSnack/">Visitar sitio</a>
+
+        <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </header>
+    <section class="portfolio-container-paginas">
+        
+        <h3>Web Mr Snack</h3>
+        <p>
+            Este proyecto realizado para un emprendimiento de snacks. Fue
+            llevado a cabo usando Html5 y Css3, ademas se implementaron
+            estategias SEO, Bootstrap y Sass, se realizaron versiones desktop
+            y mobile.
+        </p>
+        <div>
+            <img src="../imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
+
+        </div>
+        <div class="btn-visitar-sitio">
+            <a href="https://danielvergaray.github.io/pagina-web-mrSnack/"><button>Visitar sitio</button> </a>
+            <a href="https://github.com/danielvergaray/pagina-web-mrSnack"><button>Ver repositorio</button> </a>
         </div>
     </section>
 </body>
