se agrega padding a secciones, tambien se agrega la opcion de regresar al menu principal en las secciones del portafolio y enlaces a las redes sociales

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </section>
       <section class="main-secundaria">
         <div class="redes">
-          <a href=""><i class="fa-brands fa-linkedin"></i></a>
-          <a href=""><i class="fa-brands fa-square-github"></i></a>
+          <a href="https://www.linkedin.com/in/daniel-vergaray-b2b97a261/"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/danielvergaray?tab=repositories&q=&type=public&language=&sort="><i class="fa-brands fa-square-github"></i></a>
         </div>
       </section>
     </main>
@@ -190,7 +190,7 @@
     <section id="contactoId" class="contacto-container" data-aos="fade-up">
       <h2>Contacto</h2>
       <div class="redes">
-        <a href="www.linkedin.com/in/daniel-vergaray"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/daniel-vergaray-b2b97a261/"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/danielvergaray?tab=repositories&q=&type=public&language=&sort="><i
             class="fa-brands fa-square-github"></i></a>
         <a href="https://wa.me/51950011434"><i class="fa-brands fa-square-whatsapp"></i></a>
