--- a/secciones/adivinaNumero.html
+++ b/secciones/adivinaNumero.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/15199fa674.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Adivina el Numero</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header-nombre-portfolio">
-            <a href="../index.html">
-                <p>Daniel Vergaray</p>
-            </a>
-        </div>
+      <div class="header-nombre-portfolio">
+        <a href="../index.html">
+          <p>Daniel Vergaray</p>
+        </a>
+      </div>
 
-
-        <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
-            <i class="fa-solid fa-bars"></i>
-        </div>
+      <div class="header-iconoRegresar-container">
+        <a href="../index.html"><i class="fa-solid fa-house"></i></a>
+      </div>
     </header>
     <section class="portfolio-container-paginas">
-
-        <h3>Juego: Adivina el Numero</h3>
-        <p>
-            Este proyecto consiste en un juego donde se genera un numero al
-            azar y el usuario debe adivinarlo, contando con pistas que se
-            muestran de acuerdo al valor introducido por el usuario. Fue
-            realizado usando javaScript.
-        </p>
-        <div>
-            <img src="../imagenes/adivinaElNumero.jpeg" alt="web-mr-snack" />
-
-        </div>
-        <div class="btn-visitar-sitio">
-            <a href="https://danielvergaray.github.io/AdivinaElNumero_juego/"><button>Visitar sitio</button>
-            </a>
-            <a href="https://github.com/danielvergaray/AdivinaElNumero_juego"><button>Ver repositorio</button> </a>
-        </div>
+      <h3>Juego: Adivina el Numero</h3>
+      <p>
+        Este proyecto consiste en un juego donde se genera un numero al azar y
+        el usuario debe adivinarlo, contando con pistas que se muestran de
+        acuerdo al valor introducido por el usuario. Fue realizado usando
+        javaScript.
+      </p>
+      <div>
+        <img src="../imagenes/adivinaElNumero.jpeg" alt="web-mr-snack" />
+      </div>
+      <div class="btn-visitar-sitio">
+        <a href="https://danielvergaray.github.io/AdivinaElNumero_juego/"
+          ><button>Visitar sitio</button>
+        </a>
+        <a href="https://github.com/danielvergaray/AdivinaElNumero_juego"
+          ><button>Ver repositorio</button>
+        </a>
+      </div>
     </section>
-</body>
-
+  </body>
 </html>
