--- a/secciones/webMrSnack.html
+++ b/secciones/webMrSnack.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/15199fa674.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Web Mr. Snack</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header-nombre-portfolio">
-            <a href="../index.html"><p>Daniel Vergaray</p></a>
-        </div>
+      <div class="header-nombre-portfolio">
+        <a href="../index.html"><p>Daniel Vergaray</p></a>
+      </div>
 
-
-        <div class="header-menuHamburguesa-container" id="menuHamburguesaBtn">
-            <i class="fa-solid fa-bars"></i>
-        </div>
+      <div class="header-iconoRegresar-container">
+        <a href="../index.html"><i class="fa-solid fa-house"></i></a>
+      </div>
     </header>
     <section class="portfolio-container-paginas">
-        
-        <h3>Web Mr Snack</h3>
-        <p>
-            Este proyecto realizado para un emprendimiento de snacks. Fue
-            llevado a cabo usando Html5 y Css3, ademas se implementaron
-            estategias SEO, Bootstrap y Sass, se realizaron versiones desktop
-            y mobile.
-        </p>
-        <div>
-            <img src="../imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
-
-        </div>
-        <div class="btn-visitar-sitio">
-            <a href="https://danielvergaray.github.io/pagina-web-mrSnack/"><button>Visitar sitio</button> </a>
-            <a href="https://github.com/danielvergaray/pagina-web-mrSnack"><button>Ver repositorio</button> </a>
-        </div>
+      <h3>Web Mr Snack</h3>
+      <p>
+        Este proyecto realizado para un emprendimiento de snacks. Fue llevado a
+        cabo usando Html5 y Css3, ademas se implementaron estategias SEO,
+        Bootstrap y Sass, se realizaron versiones desktop y mobile.
+      </p>
+      <div>
+        <img src="../imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
+      </div>
+      <div class="btn-visitar-sitio">
+        <a href="https://danielvergaray.github.io/pagina-web-mrSnack/"
+          ><button>Visitar sitio</button>
+        </a>
+        <a href="https://github.com/danielvergaray/pagina-web-mrSnack"
+          ><button>Ver repositorio</button>
+        </a>
+      </div>
     </section>
-</body>
-
+  </body>
 </html>
