continua version desktop

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <div class="header-info-mobile" id="menuDesplegable">
     <ul id="menuHamburguesaId"></ul>
   </div>
+
   <section id="todoElContenido" class="todo-el-contenido">
     <main>
       <section class="main-principal">
@@ -44,101 +45,116 @@
             <br />Developer Jr.
           </h1>
         </div>
-        <div class="main-foto" id="sobreMi"> <!-- Para ir desde el navbar  -->
-          <img src="./imagenes/yo-cv.jpeg" alt="foto-de-perfil" />
-        </div>
+
       </section>
-      <section class="main-secundaria">
-        <div class="redes">
-          <a href="https://www.linkedin.com/in/daniel-vergaray-b2b97a261/"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/danielvergaray?tab=repositories&q=&type=public&language=&sort="><i class="fa-brands fa-square-github"></i></a>
-        </div>
-      </section>
+
     </main>
     <section class="sobreMi-container">
-      <h2 class="animate__animated animate__fadeIn">Sobre mi</h2>
-      <!-- <img
-          src="./imagenes/yo-cv.jpeg"
-          alt="foto-de-perfil"
-          class="animate__animated animate__bounce"
-        /> -->
-      <!-- <h3>Soy Daniel</h3> -->
-      <!-- <p data-aos="fade-up" id="estudiosId">
-          Una persona trabajadora, constante y dedicada, considero que más
-          importante que el talento es la dedicación y convicción de querer
-          alcanzar un objetivo. Creo firmemente que el trabajo en equipo es la
-          mejor forma de llevar a cabo un proyecto. Sin embargo, puedo trabajar de
-          manera independiente también. Para finalizar, considero que el
-          crecimiento individual se traduce en el crecimiento de la empresa en sí.
-        </p> -->
-      <p data-aos="fade-up">
-        Mi nombre es Daniel, soy ingeniero civil de profesión. Esta hermosa
-        carrera me ha llevado a conocer distintos aspectos de la vida como el
-        hecho de que el ser humano es capaz de muchas cosas siempre que lo
-        crea posible, capaz de adaptarse a cualquier situación y reinventarse
-        las veces que sean necesarias. Es este último tópico me llevo a darme
-        cuenta que quería darle un rumbo a mi vida. Es por eso que desde el
-        año 2022 encontré lo que me apasiona. Comencé a entrar al mundo de la
-        programación porque jamás es tarde para volver a empezar.
-      </p>
+      <div class="seccion-fotoSobreMi">
 
-      <p data-aos="fade-up" id="estudiosId">
-        A nivel profesional, como ingeniero civil he tenido experiencia en
-        coordinación de proyectos, manejo de personal y trabajo en equipo.
-        Experiencias que me han ayudado a mejorar habilidades blandas como
-        gestión de conflictos, manejo del estrés, habilidades de comunicación,
-        entre otras. Las cuales son fundamentales en el desempeño de
-        actividades diarias dentro de cualquier empresa.
-      </p>
-    </section>
-    <section class="estudios">
-      <h2 class="animate__animated animate__fadeIn">Estudios</h2>
-      <p data-aos="fade-up">
-        Soy una persona trabajadora y dedicada, considero que más importante
-        que el talento es la dedicación y el constante aprendizaje. Te cuento
-        cuales son los cursos que he tomado en esta etapa.
-      </p>
-      <h3>Cursos y especializaciones</h3>
-      <ul data-aos="flip-left">
-        <li><i class="fa-solid fa-check"></i>Desarrollo web</li>
-        <p class="titulo-instituto">CoderHouse</p>
-        <p>
-          08 semanas en donde se desarrollaron temas como Html5, Css3, Sass,
-          Bootstrap, entre otros.
+        <div class="main-foto" id="sobreMi"> <!-- Para ir desde el navbar  -->
+          <img src="./imagenes/yo-cv.jpeg" alt="foto-de-perfil" />
+          <section class="main-secundaria">
+            <div class="redes">
+              <a href="https://www.linkedin.com/in/daniel-vergaray-b2b97a261/"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://github.com/danielvergaray?tab=repositories&q=&type=public&language=&sort="><i
+                  class="fa-brands fa-square-github"></i></a>
+            </div>
+          </section>
+        </div>
+
+      </div>
+      <div class="texto-sobreMi">
+        <h2 class="animate__animated animate__fadeIn">Sobre mi</h2>
+
+        <p data-aos="fade-up">
+          Mi nombre es Daniel, soy ingeniero civil de profesión. Esta hermosa
+          carrera me ha llevado a conocer distintos aspectos de la vida como el
+          hecho de que el ser humano es capaz de muchas cosas siempre que lo
+          crea posible, capaz de adaptarse a cualquier situación y reinventarse
+          las veces que sean necesarias. Es este último tópico me llevo a darme
+          cuenta que quería darle un rumbo a mi vida. Es por eso que desde el
+          año 2022 encontré lo que me apasiona. Comencé a entrar al mundo de la
+          programación porque jamás es tarde para volver a empezar.
         </p>
 
-        <li><i class="fa-solid fa-check"></i>javaScript</li>
-        <p class="titulo-instituto">CoderHouse</p>
-        <p>08 semanas en donde se desarrollaron lógica de javaScript.</p>
+        <p data-aos="fade-up" id="estudiosId">
+          A nivel profesional, como ingeniero civil he tenido experiencia en
+          coordinación de proyectos, manejo de personal y trabajo en equipo.
+          Experiencias que me han ayudado a mejorar habilidades blandas como
+          gestión de conflictos, manejo del estrés, habilidades de comunicación,
+          entre otras. Las cuales son fundamentales en el desempeño de
+          actividades diarias dentro de cualquier empresa.
+        </p>
+      </div>
 
-        <li><i class="fa-solid fa-check"></i>React</li>
-        <p class="titulo-instituto">CoderHouse</p>
-        <p>Cursando actualmente (08 semanas).</p>
-
-        <li><i class="fa-solid fa-check"></i>WordPress</li>
-        <p class="titulo-instituto">CoderHouse</p>
-        <p>Proxímamente.</p>
-
-        <li id="portfolioId"><i class="fa-solid fa-check"></i>Vue js</li>
-        <p class="titulo-instituto">Udemy</p>
-        <p>Proxímamente.</p>
-      </ul>
     </section>
+
+    <section class="seccion2-desktop">
+
+
+      <section class="estudios">
+        <h2 class="animate__animated animate__fadeIn">Estudios</h2>
+        <p data-aos="fade-up">
+          Soy una persona trabajadora y dedicada, considero que más importante
+          que el talento es la dedicación y el constante aprendizaje. Te cuento
+          cuales son los cursos que he tomado en esta etapa.
+        </p>
+        <h3>Cursos y especializaciones</h3>
+        <ul data-aos="flip-left">
+          <li><i class="fa-solid fa-check"></i>Desarrollo web</li>
+          <p class="titulo-instituto">CoderHouse</p>
+          <p>
+            08 semanas en donde se desarrollaron temas como Html5, Css3, Sass,
+            Bootstrap, entre otros.
+          </p>
+
+          <li><i class="fa-solid fa-check"></i>javaScript</li>
+          <p class="titulo-instituto">CoderHouse</p>
+          <p>08 semanas en donde se desarrollaron lógica de javaScript.</p>
+
+          <li><i class="fa-solid fa-check"></i>React</li>
+          <p class="titulo-instituto">CoderHouse</p>
+          <p>Cursando actualmente (08 semanas).</p>
+
+          <li><i class="fa-solid fa-check"></i>WordPress</li>
+          <p class="titulo-instituto">CoderHouse</p>
+          <p>Proxímamente.</p>
+
+          <li id="portfolioId"><i class="fa-solid fa-check"></i>Vue js</li>
+          <p class="titulo-instituto">Udemy</p>
+          <p>Proxímamente.</p>
+        </ul>
+      </section>
+      <section class="idiomas idiomas-desktop">
+        <h2 class="animate__animated animate__fadeIn">Idiomas</h2>
+        <p data-aos="fade-up">
+          Siendo el español mi idioma nativo, he estudiado otros idiomas a lo largo de los años.
+        </p>
+        <ul data-aos="flip-left">
+          <li><i class="fa-solid fa-check"></i>Inglés</li>
+          <p>
+            Más de 10 años de estudios contantes del idioma. Los estudios fueron realizados en reconocidos institutos en
+            Venezuela y Perú, ademas de poseer cursos de docencia en el idioma Inglés.
+          </p>
+
+          <li><i class="fa-solid fa-check"></i>Francés</li>
+          <p>01 año de estudio en la alianza francesa con sede en Venezuela.</p>
+
+        </ul>
+      </section>
+    </section>
+
     <section class="portfolio-container" data-aos="fade-up">
       <h2>Portfolio</h2>
+      <p>Esta seccion podrás observar los proyectos que he desarollado</p>
       <div class="proyectos-container">
         <div class="proyectos">
           <a href="./secciones/webMrSnack.html">
-            <p>Esta seccion podrás observar los proyectos que he desarollado</p>
             <h3>Web Mr Snack</h3>
             <img src="./imagenes/web-mr-snack.jpeg" alt="web-mr-snack" />
           </a>
-          <!-- <p>
-              Este proyecto realizado para un emprendimiento de snacks. Fue
-              llevado a cabo usando Html5 y Css3, ademas se implementaron
-              estategias SEO, Bootstrap y Sass, se realizaron versiones desktop
-              y mobile.
-            </p> -->
+          
         </div>
         <div class="proyectos" data-aos="fade-up">
           <a href="./secciones/ecommerceMrSnack.html">
@@ -170,7 +186,7 @@
         </div>
       </div>
     </section>
-    <section class="idiomas">
+    <section class="idiomas-mobile">
       <h2 class="animate__animated animate__fadeIn">Idiomas</h2>
       <p data-aos="fade-up">
         Siendo el español mi idioma nativo, he estudiado otros idiomas a lo largo de los años.
@@ -187,7 +203,7 @@
 
       </ul>
     </section>
-    <section id="contactoId" class="contacto-container" data-aos="fade-up">
+    <section id="contactoId" class="contacto-container" >
       <h2>Contacto</h2>
       <div class="redes">
         <a href="https://www.linkedin.com/in/daniel-vergaray-b2b97a261/"><i class="fa-brands fa-linkedin"></i></a>
